--- a/day-4/Makefile
+++ b/day-4/Makefile
@@ -1,8 +1,12 @@
-PART_1 = part-1.o common.o
+OBJ = main.o common.o
 
-all: part-1
-part-1: $(PART_1)
-	$(CC) $(PART_1) $(LD_FLAGS) -o $@
+all: part-1 part-2
+
+part-1: $(OBJ)
+	$(CC) $(OBJ) $(LD_FLAGS) -o $@
+
+part-2: $(OBJ)
+	$(CC) $(OBJ) $(LD_FLAGS) -o $@
 
 clean:
-	rm -f *.o part-1
+	rm -f *.o part-1 part-2
