--- a/day-7/Makefile
+++ b/day-7/Makefile
@@ -1,7 +1,7 @@
-PART_1 = common.o main.o
+LDFLAGS = -lfl
+OBJ = main.o common.o lexer.o
 
-part-1: $(PART_1)
-	$(CC) $(PART_1) $(LD_FLAGS) -o $@
-
+main: $(OBJ)
+	$(CC) $(OBJ) $(LDFLAGS) -o $@
 clean:
-	rm -f *.o part-1
+	rm -f *.o main
