--- a/day-6/Makefile
+++ b/day-6/Makefile
@@ -1,9 +1,12 @@
-PART_1 = part-1.o common.o
+OBJ = main.o common.o
 
-all: part-1
+all: part-1 part-2
 
-part-1: $(PART_1)
-	$(CC) $(PART_1) $(LDFLAGS) -o $@
+part-1: $(OBJ)
+	$(CC) $(OBJ) $(LDFLAGS) -o $@
+
+part-2: $(OBJ)
+	$(CC) $(OBJ) $(LDFLAGS) -o $@
 
 clean:
-	rm -f *.o part-1
+	rm -f *.o part-1 part-2
